--- a/cliente/src/App.css
+++ b/cliente/src/App.css
@@ -38,7 +38,41 @@ a{
    
  }
 
+.headerdashboard{
+    padding:10px;
+    margin-top: 20px;
+    display: flex;   
+    justify-content: center;
+    align-items: center;
+    font-size: 33px;
+    margin-left: 20px;
+    height:83px ;
+    width: 935px;
+    background-color:#4C6FF7;
+    color: white;
+    border-radius: 8px;
+ 
+    
 
+}
+
+.icono{
+    display: flex;
+    flex-direction: row;
+    gap:5px;
+    height: 20px;
+
+
+}
+
+
+.iconos{
+  
+    height: 50px;
+    font-size: 17px;
+    
+
+}
 
  .header{
     margin-top: 20px;
@@ -53,7 +87,7 @@ a{
     display: flex;   
     justify-items: start;
     gap:20px;
-    margin-top: 20px;
+    margin-top: 1px;
 
     
  }
