--- a/cliente/src/Componentes/Factura/factura.css
+++ b/cliente/src/Componentes/Factura/factura.css
@@ -1,30 +1,22 @@
-
-#factura_component{
- width: 600px;
- margin: 15px;
- border-radius: 8px; 
- box-shadow: 0px 2px 0px 8px rgba(0,0,0,0.08);
- 
- 
- 
-
-
+#factura_component {
+  width: 600px;
+  margin: 15px;
+  border-radius: 8px;
+  box-shadow: 0px 2px 0px 8px rgba(0, 0, 0, 0.08);
 }
-.factura{
+.factura {
   padding: 8px;
   justify-content: center;
- }
-
-.infolocal{
-  display: flex;
-  flex-direction: column;
- align-items: center;
- padding: 12px;
- 
 }
 
+.infolocal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 12px;
+}
 
-#footer_fa{
+#footer_fa {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -32,5 +24,4 @@
   background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
   color: white;
   font-size: 8px;
-   
 }
