--- a/cliente/src/App.css
+++ b/cliente/src/App.css
@@ -300,7 +300,7 @@ a {
 .imagenheader {
   display: flex;
   padding: 5px;
- 
+
   margin-top: 20px;
   height: 100px;
   width: 140px;
@@ -308,10 +308,9 @@ a {
 .img {
   height: 120px;
   width: 200px;
-
   background-size: contain;
   background-repeat: no-repeat;
-  background-image: url("../public/Screenshot_4-removebg-preview.png");
+  background-image: url("https://i.ibb.co/6styMZZ/logoCRM.png");
 }
 
 .headerlogin {
